--- a/bash/config
+++ b/bash/config
@@ -1,5 +1,19 @@
-export PS1="\w$ "
-export EDITOR="mate -w"
+set -o vi
+set -o noclobber
+
+function parse_git_branch {
+  ref=$(git symbolic-ref HEAD 2> /dev/null) || return
+  echo "[${ref#refs/heads/}]"
+}
+
+export PS1="\[\e]0;\w\a\]\n\[\e[32;1m\]\u@\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
+
+export PAGER='less'
+export EDITOR='vi'
+
+export HISTCONTROL="ingnorespace:erasedups"
+export HISTIGNORE="l:ll:la:ld:lla:lf:ls:exit:cd:..:pwd:hs:hst:cal:e .:gs:gl:gl5:gd:ga ."
+export HISTSIZE=5000
 
 if [[ -f ~/.dir_colors ]]; then
   eval "`dircolors -b ~/.dir_colors`"
