--- a/bash/config
+++ b/bash/config
@@ -18,3 +18,6 @@ export HISTSIZE=5000
 if [[ -f ~/.dir_colors ]]; then
   eval "`dircolors -b ~/.dir_colors`"
 fi
+
+[[ -s "$HOME/.rvm/scripts/rvm" ]] && . "$HOME/.rvm/scripts/rvm"
+
