--- a/bash/config
+++ b/bash/config
@@ -18,3 +18,5 @@ export HISTSIZE=5000
 if [[ -f ~/.dir_colors ]]; then
   eval "`dircolors -b ~/.dir_colors`"
 fi
+
+[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
