--- a/bash/config
+++ b/bash/config
@@ -23,9 +23,18 @@ export HISTCONTROL="ignoredups:ingnorespace:erasedups"
 export HISTIGNORE="l:ll:la:ld:lla:lf:ls:exit:cd:..:pwd:hs:hst:cal:e .:gs:gl:gl5:gd:ga ."
 export HISTSIZE=50000
 
-if [[ -f ~/.dir_colors ]]; then
-  eval "`dircolors -b ~/.dir_colors`"
+if hash dircolors 2>/dev/null; then
+  # Linux
+  if [[ -f ~/.dir_colors ]]; then
+    eval "`dircolors -b ~/.dir_colors`"
+  fi
+else
+  # OSX
+  export CLICOLOR=YES
+  export LSCOLORS="Gxfxcxdxbxegedabagacad"
 fi
+
+
 
 [[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
 
