--- a/bash/config
+++ b/bash/config
@@ -6,18 +6,18 @@ function parse_git_branch {
   echo "[${ref#refs/heads/} $(git rev-parse --short HEAD)]"
 }
 
-function vng_bitbake_env {
-    if [ -z "${MACHINE}" ] && [ -z "${VAD_SCM_OBJ}" ]; then
-        echo "";
-    else
-        echo "\[\e[1;30;1m\]{$MACHINE $VAD_SCM_OBJ}\[\e[0m\]"
-    fi
-}
+# function vng_bitbake_env {
+#     if [ -z "${MACHINE}" ] && [ -z "${VAD_SCM_OBJ}" ]; then
+#         echo "";
+#     else
+#         echo "\[\e[1;30;1m\]{$MACHINE $VAD_SCM_OBJ}\[\e[0m\]"
+#     fi
+# }
 
 if [[ -n $SSH_CONNECTION ]]; then
-  export PS1="\[\e]0;\w\a\]\n\[\e[31;1m\]\u@\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]$(vng_bitbake_env)\n\$ "
+  export PS1="\[\e]0;\w\a\]\n\[\e[31;1m\]\u@\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
 else
-  export PS1="\[\e]0;\w\a\]\n\[\e[32;1m\]\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]$(vng_bitbake_env)\n\$ "
+  export PS1="\[\e]0;\w\a\]\n\[\e[32;1m\]\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
 fi
 
 export PAGER='less'
