--- a/bash/config
+++ b/bash/config
@@ -14,11 +14,11 @@ function parse_git_branch {
 #     fi
 # }
 
-if [[ -n $SSH_CONNECTION ]]; then
-  export PS1="\[\e]0;\w\a\]\n\[\e[31;1m\]\u@\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
-else
-  export PS1="\[\e]0;\w\a\]\n\[\e[32;1m\]\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
-fi
+# if [[ -n $SSH_CONNECTION ]]; then
+#   export PS1="\[\e]0;\w\a\]\n\[\e[31;1m\]\u@\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
+# else
+#   export PS1="\[\e]0;\w\a\]\n\[\e[32;1m\]\h \[\e[33;1m\]\w\[\e[0m\] \[\e[36;1m\]\$(parse_git_branch)\[\e[0m\]\n\$ "
+# fi
 
 export PAGER='less'
 export EDITOR='vi'
